@@ -2,7 +2,6 @@ package org.icij.datashare;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
@@ -14,7 +13,6 @@ import java.util.*;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-
 import static java.util.Arrays.stream;
 import static java.util.Comparator.reverseOrder;
 import static java.util.Optional.ofNullable;
@@ -26,9 +24,13 @@ public abstract class DeliverableService<T extends Deliverable> {
     protected final DeliverableRegistry<T> deliverableRegistry;
 
     abstract T newDeliverable(URL url);
+
     abstract DeliverableRegistry<T> createRegistry(InputStream pluginJsonContent);
+
     abstract String getDeleteOpt(Properties cliProperties);
+
     abstract String getInstallOpt(Properties cliProperties);
+
     abstract String getListOpt(Properties cliProperties);
 
     public DeliverableService(Path deliverableDir, InputStream inputStream) {
@@ -45,16 +47,17 @@ public abstract class DeliverableService<T extends Deliverable> {
     }
 
     public void downloadAndInstallFromCli(Properties cliProperties) throws IOException {
-       try {
-           downloadAndInstall(getInstallOpt(cliProperties)); // plugin with id
-       } catch (DeliverableRegistry.UnknownDeliverableException not_a_plugin) {
-           try {
-               URL pluginUrl = new URL(getInstallOpt(cliProperties));
-               downloadAndInstall(pluginUrl); // from url
-           } catch (MalformedURLException not_url) {
-               newDeliverable(Paths.get(getInstallOpt(cliProperties)).toUri().toURL()).install(deliverablesDir); // from file
-           }
-       }
+        try {
+            downloadAndInstall(getInstallOpt(cliProperties)); // plugin with id
+        } catch (DeliverableRegistry.UnknownDeliverableException not_a_plugin) {
+            try {
+                URL pluginUrl = new URL(getInstallOpt(cliProperties));
+                downloadAndInstall(pluginUrl); // from url
+            } catch (MalformedURLException not_url) {
+                newDeliverable(Paths.get(getInstallOpt(cliProperties)).toUri().toURL()).install(
+                        deliverablesDir); // from file
+            }
+        }
     }
 
     public Set<DeliverablePackage> list(String patternString) {
@@ -66,15 +69,20 @@ public abstract class DeliverableService<T extends Deliverable> {
     }
 
     private SortedSet<DeliverablePackage> merge(Set<T> registryDeliverables, Set<File> listInstalled) {
-        SortedSet<DeliverablePackage> installedDeliverables = listInstalled.stream().sorted(reverseOrder()).map(f -> { //reverseOrder() for having latest versions
-            try {
-                T installedDeliverable = newDeliverable(f.toURI().toURL());
-                return new DeliverablePackage(installedDeliverable, deliverablesDir, deliverableRegistry.deliverableMap.get(installedDeliverable.getId()));
-            } catch (MalformedURLException e) {
-                throw new RuntimeException(e);
-            }
-        }).collect(Collectors.toCollection(TreeSet::new));
-        installedDeliverables.addAll(registryDeliverables.stream().map(d -> new DeliverablePackage(null, deliverablesDir, d)).collect(toSet()));
+        SortedSet<DeliverablePackage> installedDeliverables =
+                listInstalled.stream().sorted(reverseOrder()).map(f -> { //reverseOrder() for having latest versions
+                    try {
+                        T installedDeliverable = newDeliverable(f.toURI().toURL());
+                        return new DeliverablePackage(installedDeliverable, deliverablesDir,
+                                                      deliverableRegistry.deliverableMap.get(
+                                                              installedDeliverable.getId()));
+                    } catch (MalformedURLException e) {
+                        throw new RuntimeException(e);
+                    }
+                }).collect(Collectors.toCollection(TreeSet::new));
+        installedDeliverables.addAll(
+                registryDeliverables.stream().map(d -> new DeliverablePackage(null, deliverablesDir, d))
+                                    .collect(toSet()));
         return installedDeliverables;
     }
 
@@ -84,7 +92,8 @@ public abstract class DeliverableService<T extends Deliverable> {
 
     public Set<File> listInstalled(String patternString) {
         Pattern pattern = Pattern.compile(patternString, Pattern.CASE_INSENSITIVE);
-        return stream(ofNullable(deliverablesDir.toFile().listFiles()).orElse(new File[]{})).filter(f -> pattern.matcher(f.getName()).find()).collect(Collectors.toSet());
+        return stream(ofNullable(deliverablesDir.toFile().listFiles()).orElse(new File[] {})).filter(
+                f -> pattern.matcher(f.getName()).find()).collect(Collectors.toSet());
     }
 
     public void downloadAndInstall(String id) throws IOException {
@@ -101,12 +110,13 @@ public abstract class DeliverableService<T extends Deliverable> {
     }
 
     public void delete(String id) throws IOException {
-        Predicate<DeliverablePackage> predicate = d -> d.reference().getId().equals(id) || d.reference().getUrl().getPath().equals(id);
+        Predicate<DeliverablePackage> predicate =
+                d -> d.reference().getId().equals(id) || d.reference().getUrl().getPath().equals(id);
         List<DeliverablePackage> deliverables = list().stream().filter(predicate).collect(Collectors.toList());
-        for (DeliverablePackage deliverable: deliverables) {
+        for (DeliverablePackage deliverable : deliverables) {
             // A deliverable can have several references, if it's installed using
             // the registry or directly from a remote URL.
-            for (Deliverable ref: deliverable.references()) {
+            for (Deliverable ref : deliverable.references()) {
                 ref.delete(deliverablesDir);
             }
         }
